{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 133,
  "lineage": "faa194d5-d081-6d93-db00-b84a388d6ef4",
  "resources": [
    {
      "module": "module.argocd",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argo/argocd-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/ssl-redirect": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "argocd-ingress",
                "namespace": "argo",
                "resource_version": "1304425",
                "uid": "edd88117-17a6-449b-a7a8-dfb1d997e5df"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "argocd.incoraics.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 443
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "argocd.incoraics.com"
                    ],
                    "secret_name": "argocd-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aks.azurerm_kubernetes_cluster.aks",
            "module.monitoring.azurerm_log_analytics_workspace.aks",
            "module.network.azurerm_application_gateway.app_gateway",
            "module.network.azurerm_public_ip.app_gateway_pip",
            "module.network.azurerm_subnet.aks_subnet",
            "module.network.azurerm_subnet.app_gateway_subnet",
            "module.network.azurerm_virtual_network.aks_vnet",
            "module.resource_group.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.argocd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argo",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argo",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/name": "argocd",
                  "app.kubernetes.io/part-of": "argocd"
                },
                "name": "argo",
                "resource_version": "1293290",
                "uid": "580f3352-d776-46e4-a130-2321454524da"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.aks.azurerm_kubernetes_cluster.aks",
            "module.monitoring.azurerm_log_analytics_workspace.aks",
            "module.network.azurerm_application_gateway.app_gateway",
            "module.network.azurerm_public_ip.app_gateway_pip",
            "module.network.azurerm_subnet.aks_subnet",
            "module.network.azurerm_subnet.app_gateway_subnet",
            "module.network.azurerm_virtual_network.aks_vnet",
            "module.resource_group.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/backendAddressPools/default-backend-pool",
                "ip_addresses": [],
                "name": "default-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/frontendIPConfigurations/frontend-ip-config",
                "name": "frontend-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/publicIPAddresses/ics-dev-aks-cluster-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              },
              {
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/frontendPorts/https-port",
                "name": "https-port",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/gatewayIPConfigurations/appgw-ip-config",
                "name": "appgw-ip-config",
                "subnet_id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/virtualNetworks/ics-dev-aks-cluster-vnet/subnets/ics-dev-aks-cluster-appgw-subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/frontendIPConfigurations/frontend-ip-config",
                "frontend_ip_configuration_name": "frontend-ip-config",
                "frontend_port_id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw",
            "identity": [],
            "location": "centralus",
            "name": "ics-dev-aks-cluster-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/backendAddressPools/default-backend-pool",
                "backend_address_pool_name": "default-backend-pool",
                "backend_http_settings_id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/applicationGateways/ics-dev-aks-cluster-appgw/requestRoutingRules/default-routing-rule",
                "name": "default-routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "ics-dev-aks-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_public_ip.app_gateway_pip",
            "module.network.azurerm_subnet.app_gateway_subnet",
            "module.network.azurerm_virtual_network.aks_vnet",
            "module.resource_group.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app_gateway_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/publicIPAddresses/ics-dev-aks-cluster-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.165.131.252",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "ics-dev-aks-cluster-appgw-pip",
            "resource_group_name": "ics-dev-aks-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.61.6.32/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/virtualNetworks/ics-dev-aks-cluster-vnet/subnets/ics-dev-aks-cluster-subnet",
            "name": "ics-dev-aks-cluster-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ics-dev-aks-rg",
            "virtual_network_name": "ics-dev-aks-cluster-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.aks_vnet",
            "module.resource_group.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.61.6.48/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/virtualNetworks/ics-dev-aks-cluster-vnet/subnets/ics-dev-aks-cluster-appgw-subnet",
            "name": "ics-dev-aks-cluster-appgw-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ics-dev-aks-rg",
            "virtual_network_name": "ics-dev-aks-cluster-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.aks_vnet",
            "module.resource_group.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.61.6.32/27"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "99b71374-bf56-4579-a1c1-4535caea7a22",
            "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/virtualNetworks/ics-dev-aks-cluster-vnet",
            "location": "centralus",
            "name": "ics-dev-aks-cluster-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "ics-dev-aks-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.61.6.32/28"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/virtualNetworks/ics-dev-aks-cluster-vnet/subnets/ics-dev-aks-cluster-subnet",
                "name": "ics-dev-aks-cluster-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-mrg/providers/Microsoft.Network/routeTables/aks-agentpool-28279113-routetable"
              },
              {
                "address_prefixes": [
                  "10.61.6.48/28"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/cf8381bd-cf5d-4057-8b9a-38a3705994b4/resourceGroups/ics-dev-aks-rg/providers/Microsoft.Network/virtualNetworks/ics-dev-aks-cluster-vnet/subnets/ics-dev-aks-cluster-appgw-subnet",
                "name": "ics-dev-aks-cluster-appgw-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    }
  ]
}